--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,22 @@ body {
   background-image: linear-gradient(to right, #73c8a9, #373b44);
 }
 
+#game-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 canvas {
   border: 5px solid #2e2e2e;
-  border-radius: 10px;
-  margin: 50px auto;
+  border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   background-image: url('assets/background.png');
   background-size: cover;
   background-repeat: no-repeat;
   z-index: 1;
+  margin-bottom: 12px;
 }
 
 .backdrop-blur {
